--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="BLACK SACHBAK. Official website and merch store for the Thrash metal band Black Sachbak."
+    />
+
+    <link rel="icon" href="./public/favicon.png" />
     <title>Black Sachbak</title>
   </head>
   <body>
